--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: "Anthony Penner"
 title: ""
 description:
 logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+favicon: 'assets/images/favicon.ico'
 baseurl:
 google_analytics: ''
 disqus: 'anthonypenner'
